# AutumnGameEngine

./: .gitignore  cargo.toml
engine/: Cargo.toml
engine/crates/engine_ecs/: cargo.toml
engine/crates/engine_ecs/src/: lib.rs
engine/crates/engine_internal/: Cargo.toml
engine/crates/engine_internal/src/: lib.rs  prelude.rs
engine/crates/engine_logger/: cargo.toml
engine/crates/engine_logger/src/: lib.rs
engine/crates/engine_rendering/: Cargo.toml
engine/src/: lib.rs  tests.rs
game/: Cargo.toml
game/src/: main.rs
